# tempo-txvis

./: .gitignore  Cargo.toml  PLAN.md  README.md
crates/txviz-api/: Cargo.toml
crates/txviz-api/src/: lib.rs  routes.rs  sse.rs  state.rs
crates/txviz-chain/: Cargo.toml
crates/txviz-chain/src/: adapter.rs  lib.rs  provider.rs  stream.rs  tempo.rs  types.rs
crates/txviz-core/: Cargo.toml
crates/txviz-core/src/: dag.rs  lib.rs  metrics.rs  model.rs  schedule.rs  trace.rs
crates/txviz-server/: Cargo.toml
crates/txviz-server/src/: ingestor.rs  main.rs
crates/txviz-storage/: Cargo.toml
crates/txviz-storage/src/: backend.rs  lib.rs  sqlite.rs
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx
web/src/api/: client.test.ts  client.ts
web/src/components/: BlockNav.test.tsx  BlockNav.tsx  ChainBadge.test.tsx  ChainBadge.tsx  DependencyGraph.test.tsx  DependencyGraph.tsx  MetricsPanel.test.tsx  MetricsPanel.tsx  ScheduleGantt.test.tsx  ScheduleGantt.tsx  TxInspector.test.tsx  TxInspector.tsx
web/src/pages/: BlockDetail.test.tsx  BlockDetail.tsx  BlockList.test.tsx  BlockList.tsx  Home.test.tsx  Home.tsx
web/src/test/: fixtures.ts  setup.ts
web/src/test/__mocks__/: react-cytoscapejs.tsx
web/src/types/: index.ts  react-cytoscapejs.d.ts
