[workspace]
members = [
    "crates/txviz-core",
    "crates/txviz-chain",
    "crates/txviz-storage",
    "crates/txviz-api",
    "crates/txviz-server",
]
resolver = "2"

[workspace.dependencies]
# Shared across crates
alloy-primitives = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
