[package]
name = "txviz-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
txviz-core = { path = "../txviz-core" }
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
futures.workspace = true
alloy-provider = { version = "1", features = ["debug-api"] }
alloy-rpc-types-eth = "1"
alloy-rpc-types-trace = "1"
alloy-rpc-client = "1"
alloy-transport-http = "1"
alloy-eips = "1"
alloy-chains = "0.2"
alloy-consensus = "1"
alloy-network = "1"
alloy-network-primitives = "1"
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
tokio = { workspace = true, features = ["test-util"] }
