[package]
name = "txviz-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
petgraph = "0.7"
indexmap = { version = "2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1"
