[package]
name = "txviz-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
txviz-core = { path = "../txviz-core" }
alloy-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
flate2 = "1"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
